--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Tip Calculator</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://kit.fontawesome.com/5bc0263873.js" crossorigin="anonymous"></script>
 </head>
